# mpi-tests

./: README.md
1/: launcher.py  worker.c
2/: launch.py  lib.cc
3/: CMakeLists.txt  child.py  main.cc
